--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "M-STORE",
+  "name": "MOSTAGBAL-STORE",
   "short_name": "M-STORE",
   "start_url": "/index.html",
   "display": "standalone",
