--- a/manifest.json
+++ b/manifest.json
@@ -8,17 +8,15 @@
   "orientation": "portrait",
   "scope": "/",
   "icons": [
-    {
-      "src": "https://cdn-icons-png.flaticon.com/512/711/711698.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "https://cdn-icons-png.flaticon.com/512/711/711698.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
+  {
+    "src": "https://cdn-icons-png.flaticon.com/512/1170/1170678.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  },
+  {
+    "src": "https://cdn-icons-png.flaticon.com/512/1170/1170678.png",
+    "sizes": "512x512",
+    "type": "image/png"
+  }
   ]
 }
